--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password verifier</title>
     <style>
-
+        body{
+            background-color:gray;
+            justify-content:center;
+            display:flex;
+            align-item:center;
+        }
     </style>
 </head>
 <body>
