--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
             background-color:gray;
             display:flex;
             justify-content:center;
-            align-item:center;
+            align-items: center;
+            height: 100vh;
+        }
+        form{
+            background-color:;
         }
         
     </style>
