--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <form action="try.html">
-        <input type="text" placeholder="Enter user id..." id="input"><br>
-        <input type="password" name="" placeholder="Enter your password" id="pass"><br>
+        <input type="text" placeholder="Enter user id..." id="input">
+        <input type="password" name="" placeholder="Enter your password" id="pass">
         <input type="submit" value="submit" id="submit">
     </form>
     <script>
